# resources/api/openapi.yaml
@@ -8,6 +8,8 @@ paths:
     post:
       operationId: createNewGame
       summary: Create a new game
+      parameters:
+        - $ref: '#/components/parameters/queryGameId'
       requestBody:
         $ref: '#/components/requestBodies/PostNewGame'
       responses:
@@ -22,7 +24,7 @@ paths:
       operationId: getGame
       summary: Get game by ID
       parameters:
-        - $ref: '#/components/parameters/gameId'
+        - $ref: '#/components/parameters/pathGameId'
       responses:
         '200':
           $ref: '#/components/responses/200_GameRetrieved'
@@ -34,7 +36,7 @@ paths:
       operationId: startGame
       summary: Start a game by ID
       parameters:
-        - $ref: '#/components/parameters/gameId'
+        - $ref: '#/components/parameters/pathGameId'
       responses:
         '200':
           $ref: '#/components/responses/200_GameStarted'
@@ -49,7 +51,7 @@ paths:
       operationId: submitTurn
       summary: Submit a new turn for the game
       parameters:
-       - $ref: '#/components/parameters/gameId'
+       - $ref: '#/components/parameters/pathGameId'
       requestBody:
         $ref: '#/components/requestBodies/PostNewTurn'
       responses:
@@ -63,10 +65,17 @@ paths:
           $ref: '#/components/responses/500_InternalServerError'
 components:
   parameters:
-    gameId:
+    pathGameId:
       name: gameId
       in: path
       required: true
+      description: The ID of the game
+      schema:
+        type: string
+        example: "123e4567-e89b-12d3-a456-426614174000"
+    queryGameId:
+      name: gameId
+      in: query
       description: The ID of the game
       schema:
         type: string
